--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" href="%PUBLIC_URL%/LOGO.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/LOGO.png" />
+
+    <title>모집 중인 중앙동아리 모음</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="멋쟁이사자처럼 제공! 인천대학교 중앙동아리 모집 링크를 한눈에 확인하세요. (2026년 2월 기준)"
     />
-    <title>React App</title>
+
+    <meta property="og:title" content="모집 중인 중앙동아리 모음" />
+    <meta
+      property="og:description"
+      content="지금 모집 중인 우리 학교 중앙동아리는 어디? 실시간 모집 리스트 확인하기"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/LOGO.png" />
+    <meta property="og:url" content="https://inu-club.site" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css"
+    />
   </head>
   <body>
+    <noscript>이 앱을 실행하려면 자바스크립트가 필요합니다.</noscript>
     <div id="root"></div>
   </body>
 </html>
